# cardiorama

./: .gitignore  CMakeLists.txt  README.md  cardio.sh
GUI/: CARDIOGUI.pro  chart.cpp  chart.h  chartview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myanalysis.cpp  myanalysis.h  plot.cpp  plot.h
Prototypes/Baseline/: my_wavelet.m
algorithm/: algorithmHRV2.cpp
data/: 100.csv_lowpass_params_results.csv  100.csv_lowpass_xD_results.csv  100.csv_nolowpass_prog7_results.csv  100.csv_nolowpass_results.csv  download.sh  files.txt  maly.csv  results_maly.csv  rr.csv
examples/DataFrame/: CMakeLists.txt  cardio.sh  testbench.cpp
examples/EcgBaselineModule/: CMakeLists.txt  README  cardio.sh  ecgbaseline-example.cpp  filtered_ecg.csv  input_signal.csv
examples/HrvDfaModule/: CMakeLists.txt  DFA_output.csv  cardio.sh  main.cpp
examples/IOModule/: CMakeLists.txt  ioExample.cpp
examples/TWavesModule/: CMakeLists.txt  cardio.sh  example.cpp  main.cpp
examples/Waves2/: Rpeaks.csv  Rpeaks2.csv  Zeszyt1.csv  cardio.sh  dobre.csv  main.cpp  output_data.csv  sygnal2.csv
examples/WavesModule/: CMakeLists.txt  cardio.sh  testbench.cpp
examples/WavesModuleMock/: CMakeLists.txt  cardio.sh  testbench.cpp
examples/client/: CMakeLists.txt  cardio.sh  client.cpp
examples/client/stubs/: EcgBaselineModuleStub.hpp  IOModuleStub.hpp  RPeaksModuleStub.hpp  WavesModuleStub.hpp
examples/dfaModule/: chf206.csv  main.cpp
examples/example/: CMakeLists.txt  input_data.csv  main.cpp  output_data.csv
examples/example2/: input_data.csv  main.cpp
examples/heartClass/: CMakeLists.txt  r_peaks.csv  sygnal.csv  testmain.cpp
examples/hrv1Module/: CMakeLists.txt  cardio.sh  hrv1example.cpp
examples/hrv2Module/: CMakeLists.txt  hrv2example.cpp
examples/rpeaks/: CMakeLists.txt  build.sh  main.cpp
examples/test/: CMakeLists.txt  main.cpp  output_data.csv  results_arma.csv
examples/wavelib/: CMakeLists.txt  cardio.sh  wavelib-example.cpp
include/: Analysis.hpp  AnalysisInterface.hpp  DFAModule.hpp  DFAModuleBase.hpp  DataFrame.hpp  Datatypes.hpp  EcgBaselineModule.hpp  EcgBaselineModuleBase.hpp  HeartClassModule.hpp  HeartClassModuleBase.hpp  Hrv1Module.hpp  Hrv1ModuleBase.hpp  Hrv2Module.hpp  Hrv2ModuleBase.hpp  HrvDfaModule.hpp  HrvDfaModuleBase.hpp  IOModule.hpp  IOModuleBase.hpp  IPhysionet.hpp  Log.hpp  ModuleBase.hpp  ModuleDFA.hpp  RPeaksFinder.h  RPeaksModule.h  RPeaksModule.hpp  RPeaksModuleBase.hpp  RPeaksModuleStub.hpp  TWAModule.cpp  TWAModule.hpp  TWAModuleBase.hpp  TWavesModule.hpp  TWavesModuleBase.hpp  WavesModuleBase.hpp  WavesModuleMock.hpp  descriptor.h  heartClassBase.hpp  heartClassModule.hpp
prototype c-/: alg_hrv1.cpp  data3.csv
prototypes/EcgBaseline/: my_butter.m  my_wavelet.m
prototypes/TWaveAlt/: TWA.m  TWaveAlt.m
prototypes/dfa/: DFA.m  Main_DFA.m  calka.m  integration.m  my_poly.m  podzial.m  polyfit_function.m  share_signal.m
prototypes/waves/: Projekt_dadm.m
src/: Analysis.cpp  DFAModule.cpp  DataFrame.cpp  EcgBaselineModule.cpp  HeartClassModule.cpp  Hrv1Module.cpp  Hrv2Module.cpp  HrvDfaModule.cpp  IOModule.cpp  ModuleBase.cpp  RPeaksFinder.cpp  RPeaksModule.cpp  RPeaksModuleStub.cpp  TWAModule.cpp  TWavesModule.cpp  WavesModuleMock.cpp  descriptor.cpp  main.cpp  standaloneTWA
src/WavesMock/: CMakeLists.txt  WavesModuleMock.cpp  testbench.cpp
test/WavesModuleMock/: CMakeLists.txt
visual/: charts.cpp  charts.hpp  charts2.pro  histogram.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
